--- a/Video Downloader 2/Video Downloader 2/Video Downloader 2.vbproj
+++ b/Video Downloader 2/Video Downloader 2/Video Downloader 2.vbproj
@@ -6,11 +6,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{FF86080A-1471-418C-A02D-3A0E0E65FE4B}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <StartupObject>Video_Downloader2.My.MyApplication</StartupObject>
+    <StartupObject>Sub Main</StartupObject>
     <RootNamespace>Video_Downloader2</RootNamespace>
     <AssemblyName>Video Downloader2</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <MyType>WindowsForms</MyType>
+    <MyType>WindowsFormsWithCustomSubMain</MyType>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -114,6 +114,7 @@
     <Compile Include="frmMain_Menu.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Module1.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
