Filtered misc items in drop list, added support for minimize from taskbar & eleminated mouse down variables for movable

--- a/Video Downloader 2/Video Downloader 2/App.config
+++ b/Video Downloader 2/Video Downloader 2/App.config
@@ -22,4 +22,7 @@
             <!--<add name="EventLog" type="System.Diagnostics.EventLogTraceListener" initializeData="APPLICATION_NAME"/> -->
         </sharedListeners>
     </system.diagnostics>
+	<System.Windows.Forms.ApplicationConfigurationSection>
+		<add key="DpiAwareness" value="PerMonitorV2" />
+	</System.Windows.Forms.ApplicationConfigurationSection>
 </configuration>
